# tds-prototype

./: .gitignore  README.md  pyproject.toml
tds_proxy/: __init__.py  __main__.py  backend.py  config.py  proxy.py
tds_proxy/tds/: __init__.py  constants.py  packets.py  tokens.py  utils.py
tests/: test_config.py  test_protocol.py
